manifetst/deployment-a.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acceleration-a
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: acceleration-a
  template:
    metadata:
      labels:
        app: acceleration-a
    spec:
      containers:
        - name: acceleration-a
          image: evkuzin/acc:1
          args: ["start"]
          ports:
          - containerPort: 8000
          resources:
            requests:
              memory: "128M"
              cpu: "25m"
            limits:
              memory: "256M"
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
